--- a/nimdoc.out.css
+++ b/nimdoc.out.css
@@ -497,6 +497,19 @@ hr {
   border: 0;
   border-top: 1px solid #aaa; }
 
+hr.footnote {
+  width: 25%;
+  border-top: 0.15em solid #999;
+  margin-bottom: 0.15em;
+  margin-top: 0.15em;
+}
+div.footnote-group {
+  margin-left: 1em; }
+div.footnote-label {
+  display: inline-block;
+  min-width: 1.7em;
+}
+
 blockquote {
   font-size: 0.9em;
   font-style: italic;
@@ -567,6 +580,7 @@ table.line-nums-table {
 .line-nums-table td.blob-line-nums pre {
   color: #b0b0b0;
   -webkit-filter: opacity(75%);
+  filter: opacity(75%);
   text-align: right;
   border-color: transparent;
   background-color: transparent;
@@ -906,6 +920,7 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Other ~ span.Identifier 
   background-position: 0 0;
   background-size: 51px 14px;
   -webkit-filter: opacity(50%);
+  filter: opacity(50%);
   background-repeat: no-repeat;
   background-image: var(--nim-sprite-base64);
   margin-bottom: 5px; }
